--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "compressorjs": "^1.1.1",
     "date-fns": "^2.29.1",
     "dropify": "^0.2.2",
     "jquery": "^3.6.1",
