--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,9 @@
     "dropify": "^0.2.2",
     "jquery": "^3.6.1",
     "react": "^18.2.0",
+    "react-avatar-editor": "^13.0.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.2",
     "react-file-base64": "^1.0.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
