--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,10 @@
     "date-fns": "^2.29.1",
     "dropify": "^0.2.2",
     "jquery": "^3.6.1",
+    "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-avatar-editor": "^13.0.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.2",
     "react-file-base64": "^1.0.3",
