--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,9 @@
 {
   "name": "overtime_data",
   "version": "0.1.0",
-  "private": true,
+  "scripts": {
+    "install": "npm install --legacy-peer-deps"
+  },
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@emotion/react": "^11.10.0",
