--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,10 @@
   "name": "overtime_data",
   "version": "0.1.0",
   "scripts": {
-    "install": "npm install --legacy-peer-deps"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
@@ -26,6 +29,7 @@
     "react": "^18.2.0",
     "react-avatar-editor": "^13.0.0",
     "react-cookie": "^4.1.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.2",
     "react-file-base64": "^1.0.3",
@@ -34,15 +38,10 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-scrollbar": "^0.5.6",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
